k8-manifest/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: bloodbank-app
  namespace: bloodbank
  labels:
    app: bloodbank-app

spec:
  replicas: 2

  revisionHistoryLimit: 10

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  selector:
    matchLabels:
      app: bloodbank-app

  template:
    metadata:
      labels:
        app: bloodbank-app

    spec:
      containers:

      - name: bloodbank-app

        image: rohith35/blood-bankapp:v1

        imagePullPolicy: Always

        ports:
        - containerPort: 80

        envfrom:
        - configMapRef:
            name: bloodbank-config
            
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"
