k8-manifest/app-svc.yml
---
apiVersion: v1
kind: Service

metadata:
  name: bloodbank-app-service
  namespace: bloodbank

spec:
  type: NodePort

  selector:
    app: bloodbank-app

  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30080
